# SysInfoFetch

./: .gitignore  CMakeLists.txt  README.md  prd.md  resources.qrc
scripts/: sign.ps1
src/: SystemDataProvider.cpp  SystemDataProvider.h  main.cpp  mainwindow.cpp  mainwindow.h
